--- a/app/views/people/edit.html.erb
+++ b/app/views/people/edit.html.erb
@@ -34,6 +34,10 @@
             <%= f.label :email, "E-mail" %><br>
             <%= f.text_field :email, :class => 'subscribe-text' %>
         </fieldset>
+        <% if current_user.admin? || current_user?(@person.user) %>
+            <%= link_to "excluir conta", @person, method: :delete, data: { confirm: "Sua conta será removida. Tem certeza?" } %>
+        <% end %>
+        <br>
         <br>
         <br>
         <%= f.submit "Salvar alterações", class: "button medium color" %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ou&nbsp;&nbsp;<%= link_to "cancelar", @person %>
