--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -125,19 +125,19 @@
     <div class="eleven columns top bottom">
 
         <h2 class="title">
-            Parede do elevador
+            O que rola no condomínio?
             <span class="line"></span>
         </h2>
+        <p>mural tipo pinterest</p>
 
         <br>
 
         <h2 class="title">
-            Últimos Pagamentos
+            Últimos pagamentos
             <span class="line"></span>
         </h2>
 
         <div class="recent-blog">
-
             <div class="blog-item">
                 <div class="date">
                     <span class="day">25</span>
