--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -19,7 +19,7 @@
 <!-- sixteen columns -->
 <div class="sixteen columns">
     <!-- sidebar -->
-    <div class="four columns bottom">
+    <div class="five columns bottom">
 
         <div class="clearfix"></div>
 
@@ -122,7 +122,7 @@
     <!-- /sidebar -->
 
     <!-- center -->
-    <div class="eleven columns top bottom">
+    <div class="ten columns top bottom">
 
         <h2 class="title">
             O que rola no condomínio?
