implementando timeline no profile

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
 		<div class="one-third column">
 			<div class="logo">
 				<!-- <%= link_to image_tag("cloud.jpg", alt: "Vivento"), root_path %> -->
-            	<h2>Vivento</h2>
+            	<h2><span class="cloud icon black"></span>Vivento</h2>
 			</div>
 		</div><!-- End Logo -->
 
