--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -10,10 +10,10 @@
 
         <div class="four columns">
             <div class="social">
-                <a href="#"><img src="http://themes.jozoor.com/crevision/white/images/icons/facebook.png" alt="" /></a>
-                <a href="#"><img src="http://themes.jozoor.com/crevision/white/images/icons/twitter.png" alt="" /></a>
-                <a href="#"><img src="http://themes.jozoor.com/crevision/white/images/icons/skype.png" alt="" /></a>
-                <a href="#"><img src="http://themes.jozoor.com/crevision/white/images/icons/vimeo.png" alt="" /></a>
+                <a href="#"><img src="/assets/icons/facebook.png" alt="" /></a>
+                <a href="#"><img src="/assets/icons/twitter.png" alt="" /></a>
+                <a href="#"><img src="/assets/icons/skype.png" alt="" /></a>
+                <a href="#"><img src="/assets/icons/vimeo.png" alt="" /></a>
             </div>
         </div>
 
