--- a/app/assets/stylesheets/css/custom.css
+++ b/app/assets/stylesheets/css/custom.css
@@ -25,15 +25,16 @@ ul.timeline li small {
     color: #8d8d8d;
 }
 ul.timeline li p {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin: 15px 0 5px 0;
     color: #8d8d8d;
 }
 
 ul.profile {
 }
 ul.profile li {
+    font-size: 14px;
     margin: 15px 0 !important;
+
 }
 ul.profile li h2 {
     padding-bottom: 15px;
