--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -51,6 +51,34 @@
         </li>
     </ul>
     <!-- /dados pessoais -->
+
+    <!-- estatísticas -->
+    <ul class="stats">
+        <li>
+            <h2>Colaboração</h2>
+        </li>
+        <li>
+            <span class="lightbulb icon black"></span>
+            13 ideias criadas
+        </li>
+        <li>
+            <span class="thumbs_up icon black"></span>
+            42 ideias aprovadas
+        </li>
+        <li>
+            <span class="thumbs_down icon black"></span>
+            17 ideias reprovadas
+        </li>
+        <li>
+            <span class="conversation icon black"></span>
+            9 comentários
+        </li>
+        <li>
+            <span class="heart icon black"></span>
+            68 curtidas
+        </li>
+    </ul>
+    <!-- /estatísticas -->
 </div>
 <!-- /sidebar -->
 
