--- a/app/assets/stylesheets/css/custom.css
+++ b/app/assets/stylesheets/css/custom.css
@@ -15,7 +15,6 @@ ul.profile {
 ul.profile li {
     font-size: 14px;
     margin: 15px 0;
-
 }
 ul.profile li h2 {
     padding-bottom: 10px;
@@ -29,7 +28,6 @@ ul.stats {
 ul.stats li {
     font-size: 14px;
     margin: 15px 0;
-
 }
 ul.stats li h2 {
     padding-bottom: 10px;
@@ -57,3 +55,21 @@ ul.timeline li p {
     color: #8d8d8d;
 }
 
+ul.last-logged-in {
+}
+ul.last-logged-in li {
+    font-size: 14px;
+    margin: 15px 0;
+}
+ul.last-logged-in li h2 {
+    padding-bottom: 10px;
+    margin-top: 40px;
+    border-bottom: 1px solid #ececec;
+    line-height: 10px;
+}
+ul.last-logged-in .circle {
+    -webkit-border-radius: 50em;
+    -moz-border-radius: 50em;
+    border-radius: 50em;
+    margin: 0 3px;
+}
