--- a/app/views/communications/index.html.erb
+++ b/app/views/communications/index.html.erb
@@ -14,3 +14,48 @@
   <% end %>
 
 </div>
+
+<!-- timeline -->
+<div class="twelve columns top bottom">
+
+    <ul class="timeline">
+        <% @communications.each do |communication| %>
+            <li>
+                <h2><%= communication.subject %>
+                    <span class="pull-right">
+                        <span class="heart icon black"></span><small>11</small>&nbsp;&nbsp;
+                        <span class="conversation icon black"></span><small>2</small>
+                    </span>
+                </h2>
+                <small>COMUNICADO em <%= to_brazillian_datetime communication.created_at %> - Autor: Mauro Kobayashi (Síndico)</small>&nbsp;&nbsp;
+                <p class="timeline-preview"><%= communication.message %>&nbsp;<a href="<%="/communications/#{communication.id}"%>"<span class="color">veja mais</span></a></p>
+            </li>
+        <% end %>
+        <li>
+            <h2>Pagamento automático da taxa de condomínio</h2>
+            <small>PAGAMENTO em 20/03/12 00:00:00</small>&nbsp;&nbsp;
+            <p class="timeline-preview">A taxa de condomínio no valor de R$260,00 foi paga automaticamente com o cartão de crédito MASTERCARD de final 7975. Veja a <a href="/invoices/1"><span class="color">fatura</span></a> gerada ou consulte seu <a href="/payments/1"><span class="color">histórico</span></a> de pagamentos.</p>
+        </li>
+        <li>
+            <h2>Instalar ar condicionado no salão de festas
+                <span class="pull-right">
+                    <span class="thumbs_up icon icon black"></span><small>11</small>&nbsp;&nbsp;
+                    <span class="thumbs_down icon icon black"></span><small>3</small>&nbsp;&nbsp;
+                    <span class="conversation icon black"></span><small>2</small>
+                </span>
+            </h2>
+            <small>IDEIA em 19/03/12 12:04:50 -  Autor: Danillo Souza</small>&nbsp;&nbsp;
+            <p class="timeline-preview">Pessoal, nos dias de calor é insuportável ficar dentro do salão de festas. O ventilador simplesmente não dá conta. Poderíamos instalar um ar condicionado lá, o que acham?...&nbsp;<a href="/communications/1"><span class="color">veja mais</span></a></p>
+        </li>
+    </ul>
+
+    <br>
+    <br>
+
+    <center>carregando...</center>
+
+    <br>
+    <br>
+
+</div>
+<!-- /timeline -->
